--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
+version: '3'
 services:
-  web:
+  app:
     build: .
     ports:
       - "3000:3000"
+      - "5000:5000"
+    volumes:
+      - .:/app
     environment:
       - NODE_ENV=production
-    restart: always
