--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "json-server": "json-server -w db.json -p 5000" 
+    "json-server": "json-server -w db.json -p 5000"
   },
   "dependencies": {
     "@types/node": "18.15.3",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "grunt": "^1.6.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
   }
