--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "grunt": "^1.6.1",
+    "grunt-contrib-jshint": "^3.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
   }
