--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -34,10 +34,28 @@ jobs:
       - name: Run Grunt tasks
         run: grunt
 
-- name: Debug Grunt Installation
-  run: |
-    npm list grunt
-    npm list grunt-cli
+ -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: hazmanwryd/cicd:latest
 
-publish:
-  needs: build
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Publish Artifact
+        run: echo "Publish steps can go here"
