--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "grunt": "^1.6.1",
+    "grunt": "~0.4.0",
     "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
