--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "grunt": "~0.4.0",
+    "grunt": "^1.6.1",
+    "grunt-contrib-nodeunit": "^2.0.0",
     "grunt-contrib-jshint": "^3.2.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
